--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,10 +73,6 @@ footer a {
     color: #024e76;
 }
 
-.intro {
-    text-align: center;
-}
-
 section {
     padding: 60px;
 }
@@ -146,12 +142,13 @@ section {
 }
 
 .section-title {
-    display: inline-block;
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -168,11 +165,7 @@ section {
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
-}
-
-.steps {
     text-align: center;
-    background: #fce138;
 }
 
 .stips div {
@@ -200,7 +193,7 @@ section {
 }
 
 .trainers {
-    text-align: center;
+    
 }
 
 .trainer {
@@ -230,6 +223,10 @@ section {
     text-align: right;
 }
 
+.flex-row {
+    display: flex;
+}
+
 .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
@@ -248,7 +245,6 @@ section {
 
 .contact {
     background: #024e76;
-    text-align: center;
 }
 
 .contact h2 {
